--- a/services/web/project/templates/index.html
+++ b/services/web/project/templates/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>ANAN</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
+  <title>SLMI</title>
 </head>
 <body>
+  <div id="root"></div>
+    <script src="{{url_for('static', filename='main.js')}}"></script>
 
 </body>
 </html>
